--- a/mashup.css
+++ b/mashup.css
@@ -1,8 +1,10 @@
-html {
+html 
+{
     height : 100%
 }
 
-body {
+body 
+{
     height: 100%;
     margin: 0;
     background-image: linear-gradient(to bottom,#657AD0,#1C98C2,#EDBBCE);
@@ -11,4 +13,21 @@ body {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
     
+}
+
+h1 
+{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:7rem;
+    color: #ffc18e;
+    text-align: center;
+}
+
+.d1-greeting 
+
+{
+    font-size: 5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-align: center;
 }
