--- a/mashup.css
+++ b/mashup.css
@@ -51,12 +51,12 @@ h1
     color:#3F0600;
 }
 
-.d4-display-new-word {
+.word--display {
   text-align: center;
   position: relative; 
 }
 
-.d4-wordArea {
+.word--display__style{
     background-color: whitesmoke;
     margin: 20px 0px 40px 0px;
     width: 600px;
