--- a/mashup.css
+++ b/mashup.css
@@ -3,65 +3,115 @@ TODO: Read https://medium.com/free-code-camp/css-naming-conventions-that-will-sa
 https://www.makeuseof.com/css-class-and-id-best-naming-practices/
 */
 
-html 
-{
-    height : 100%
-}
+
 
 body 
 {
-    height: 100%;
-    background-image: linear-gradient(to bottom,#657AD0,#1C98C2,#EDBBCE);
+    
+    background-color: #FAF0E4;
+    /*background-image: linear-gradient(to bottom,#657AD0,#1C98C2,#EDBBCE);*/
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: white;
+    color:#219C90;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
     
 }
 
-h1 
+h1
 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size:7rem;
-    color: #ffc18e;
+    font-size:10rem;
+    color: #E9B824;
     text-align: center;
+   
 }
+
+
 
 .invite
 
-{
+{   margin:40px;
+    border-radius:20px;
+    padding:20px;
+    height: 600px;
+    background-color:#219C90;
     font-size: 5rem;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: #E9B824;
     text-align: center;
-    
+    text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
 }
 
 .intro {
     margin: 40px;
     padding: 40px;
     text-align: justify;
-    line-height: 2rem;
-    border: 5px solid white;
-    border-radius: 20px;
+    line-height: 60px;
+    font-size: 30px;
     
 }
 
 .rules__acronym{
-    color:#3F0600;
+    color:#EE9322;
 }
 
-.word--display {
+.word--display, .number--display {
   text-align: center;
-  position: relative; 
+  position: relative;
+
+
 }
 
-.word--display__style{
-    background-color: whitesmoke;
+.word--display__box, .number--display__box {
+    margin: 40px;
+    border: 40px;
+    padding: 40px;
+    width: 900px;
+    height: 200px;
+    text-align: center;
+    position: relative;
+    background-color: #219C90;
+    color: #E9B824;
+    border-radius: 20px;
+  
+}
+
+.number--display__box {
+    width: 450px;
+    height: 150px;
+}
+
+.word--display__style, .number--display__style {
+    text-align: center;
+    position: relative;
     margin: 20px 0px 40px 0px;
+    border:20px;
     width: 600px;
     height: 100px;
-    font-size: 50px;
+    font-size: 70px;
+    font-weight:bold;
     border-radius: 20px;
+    text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
+    
 }
 
+
+
+.word--click, .number--click{
+   
+    text-align: center;
+    position: relative;
+}
+
+.word--click_new-word, .number--click_new-number {
+    padding: 20px;
+    font-size:30px;
+    background-color:#D83F31;
+    color: #E9B824;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.number--display__box {
+    color: #E9B824;
+}
