updated todo list in html and css

--- a/mashup.css
+++ b/mashup.css
@@ -1,6 +1,10 @@
 /*TODO: refer to naming conventions
-TODO: Read https://medium.com/free-code-camp/css-naming-conventions-that-will-save-you-hours-of-debugging-35cea737d849
+TODO: 
+Read https://medium.com/free-code-camp/css-naming-conventions-that-will-save-you-hours-of-debugging-35cea737d849
 https://www.makeuseof.com/css-class-and-id-best-naming-practices/
+
+Watch: UI palette - https://www.youtube.com/watch?v=yYwEnLYT55c&t=396s
+       60-30-10 - https://www.youtube.com/watch?v=UWwNIMHFdW4
 */
 
 /*TODO: Make it mobile friendly and interactive*/
