--- a/mashup.css
+++ b/mashup.css
@@ -17,144 +17,274 @@ Watch: UI palette - https://www.youtube.com/watch?v=yYwEnLYT55c&t=396s
 Others:
       - #E9B824 and #EE9322  */
     
+     html
+      {
+        max-width: 100%;
+        
+        
+      }
+
+    
 
 
       body 
-      {
+      {   max-width:100%;
+          
           background-color:#FAF0E4;
-          background-repeat: no-repeat;
-          background-attachment: fixed;
+          /*background-repeat: no-repeat;
+          background-attachment: fixed;*/
           color:#219C90;
           font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-          
+             
       }
       
       h1
-      {
+      {   max-width:100%;
+          height:auto;
           font-family: Arial, Helvetica, sans-serif;
-          font-size:10rem;
           color: #E9B824;
           text-align: center;
+          font-size: 47px;
+          margin:0;
+          
          
       }
       
       
       .invite
       
-      {   margin:40px;
-          border-radius:20px;
-          padding:20px;
-          height: 600px;
+      {   
+         /* border-radius:20px;
+          
+          height: 300px;
           background-color:#219C90;
-          font-size: 5rem;
           font-family: Arial, Helvetica, sans-serif;
           color: #E9B824;
           text-align: center;
           text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
+        
+          max-width:100%;
+          font-size: 3vw;
+          box-sizing: border-box;
+          width:100%;
+          float:inline-start;
+          flex-wrap: column;
+        */margin: 0px;
+        padding: 40px;
+        text-align: justify;
+        line-height: 60px;
+        font-size: 30px;
+        max-width:100%;
+        text-align:center;
+        color: #E9B824;
+        text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
+        background-color:#219C90;
+        border-radius:20px;
+        box-shadow: 5px 10px 10px #888888
+
+
+      }
+
+      h2 
+      {
+        font-size: 20px;
       }
       
-      .intro {
-          margin: 40px;
-          padding: 40px;
+      p.invite__greeting
+      {
+        margin-top:30px;
+      }
+     
+      .intro 
+      {
+          margin: 0px;
+          padding: 20px 40px 20px 50px;
           text-align: justify;
-          line-height: 60px;
-          font-size: 30px;
-          
+          line-height: 30px;
+          font-size: 15px;
+          max-width:100%;
+         
       }
       
-      .rules {
-          display:flex;
+    
+
+      .rules, .rules__click{
+        display:flex;
           position:relative;
           cursor:pointer;
           background-color: #D83F31;
           color:#E9B824;
-          margin-top:50px;
-          margin-left: 450px;
-          padding:10px;
+          margin: 0px;
+          padding-left: 10px;
           width:100px;
           text-align: center;
           border-radius: 20px;
+          box-shadow: 5px 5px 5px #888888
       }
       
       .rules--hide {
           color:#219C90;
           display:none;
-          height:200px;
+          
           position:relative;
-          margin-top:50px;
-          margin-left: 450px;
+          margin:0px;
+          border:0px;
+          padding:0px;
+          
          
       }
       
       .rules:focus + .rules--hide{
-          display: block;
+         display: block;
+          
       }
       
       .rules__acronym{
           color:#EE9322;
       }
       
-      .word--display, .number--display {
-        text-align: center;
-        position: relative;
-        display: flex;
-        text-align: center;
-        flex-flow: row wrap;
-      
+      .play_area {
+        padding:40px;
+        display:flex;
+        flex-direction: column;
+        flex-wrap:wrap;
+        justify-content: center;
       }
-      
-      .word--display__box, .number--display__box {
-          margin: 60px 60px 60px 300px;
-          border: 40px;
-          
-          padding: 40px;
-          width: 900px;
-          height: 200px;
+
+      .word_area 
+      {
+        padding: 0px;
+        
+        margin-bottom: 90px;
+      }
+      .word--display {
+        
           text-align: center;
           position: relative;
-          background-color: #219C90;
+          max-width: 100%;
+          
+          font-size:30px;
+          background-color:transparent;
           color: #E9B824;
-          border-radius: 20px;
-          display: flex;
-          text-align: center;
-          flex-flow: row wrap;
+          font-weight: bold;
+          border-radius: 10px;
+          padding: 10px;
+          border:50px;
+          margin-bottom: 20px;
+         
+      }
       
-      
-        
+      .word--display__box{
+            
+          padding: 20px 50px 20px 50px;
+          font-size:40px;
+          background-color:#219C90;
+          border-color: transparent;
+          color: #E9B824;
+          text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
+          font-weight: bold;
+          margin: 0px;
+            
+          border-radius: 10px;
+          box-shadow: 5px 10px 18px #888888
+          
+           
       }
       
     
-      .word--display__style,  .number--display__style  {
+      .word--display__style, {
           text-align: center;
-          position: relative;
-      
-          margin: 20px 0px 40px 120px;
-          border:20px;
-          width: 600px;
-          height: 100px;
-          font-size: 50px;
-          font-weight:bold;
+        font-size: 50px;
           border-radius: 20px;
           text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
           
+          font-size:30px;
+          border:20px;
       }
       
+      .number--display
+
+      {
+       text-align: center;
+       position: relative;
+       max-width: 100%;
+       font-size:30px;
+      
+       color: #E9B824;
+       font-weight: bold;
+       border-radius: 10px;
+       margin-bottom:20px;
+      }
+
+      .number--display__box
+      {
+        padding: 20px 50px 20px 50px;
+          font-size:40px;
+          background-color:#219C90;
+          color: #E9B824;
+          
+          font-weight: bold;
+          border-radius: 10px;
+          margin: 0px;
+          padding: 30px 70px 20px 70px;
+          box-shadow: 5px 10px 18px #888888
+      }
+
+      .number--display__style
+      {
+        text-align: center;
+        font-size: 50px;
+        border-radius: 20px;
+        text-shadow: 0 0 3px #EE9322, 0 0 5px #D83F31;
+          
+          font-size:30px;
+          border:20px;
+
+      }
+
     
-      .word--click, .number--click, .rules__click {
+      .word--click {
          
           text-align: center;
-          position: relative;
+          
+          margin:0px;
+          border: 0px;
+          text-align: center;
+          
+        
       }
       
-      .word--click_new-word, .number--click_new-number, .rules__click {
-          padding: 20px;
-          font-size:30px;
+      .number--click {
+         
+        text-align: center;
+         margin:0px;
+        border: 0px;
+        text-align: center;
+        
+      
+    }
+      .word--click_new-word{
+          padding: 10px;
+          font-size:20px;
           background-color:#D83F31;
           color: #E9B824;
           font-weight: bold;
           border-radius: 10px;
+          margin: 0px;
+          border:0px;
+          max-width:100%
       }
       
-      .number--display__box {
-          color: #E9B824;
-      }
+   
+      .number--click_new-number
+      {
+        padding: 10px;
+        font-size:20px;
+        background-color:#D83F31;
+        color: #E9B824;
+        font-weight: bold;
+        border-radius: 10px;
+        margin: 0px;
+        border:0px;
+        max-width:100%
+    }
